dolphin-deploy-agent/src/yaml/small/20-tencent-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: devops
  name: dolphin-gitlab-service
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: <GITLAB_ADDRESS>
      http:
        paths:
          - backend:
              serviceName: dolphin-gitlab-service
              servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: devops
  name: dolphin-sonar-service
spec:
  ingressClassName: nginx
  rules:
    - host: <SONAR_ADDRESS>
      http:
        paths:
          - backend:
              serviceName: dolphin-sonar-service
              servicePort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: devops
  name: dolphin-yapi-service
spec:
  ingressClassName: nginx
  rules:
    - host: <YAPI_ADDRESS>
      http:
        paths:
          - backend:
              serviceName: dolphin-yapi-service
              servicePort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dolphin-nexus-service
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
    - host: <NEXUS_ADDRESS>
      http:
        paths:
          - path: /
            backend:
              serviceName: dolphin-nexus-service
              servicePort: 80
    - host: <DOCKER_ADDRESS>
      http:
        paths:
          - path: /
            backend:
              serviceName: dolphin-nexus-service
              servicePort: 5000
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: devops
  name: dolphin-jenkins-service
spec:
  ingressClassName: nginx
  rules:
    - host: <JENKINS_ADDRESS>
      http:
        paths:
          - backend:
              serviceName: dolphin-jenkins-service
              servicePort: 8080
